--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </div>
       <br />
       <p align="center">
-        <img class="Blob" src="/./img/avt.jpg" width="120" height="120" alt="TienMinh">
+        <img class="Blob" src="/./img1/avt1.jpg" width="120" height="120" alt="TienMinh">
       </p>
       <h2 class="NameFtTienMinh">
         <div id="userName" style="font-family: 'Pattaya';font-size: 26px;"> 𝙃𝙤̂̀ 𝙃𝙪̛̃𝙪 𝘾𝙪̛𝙤̛𝙣𝙜 <img
@@ -78,45 +78,45 @@
           <u style="font-size: 25px;" class="NameFtTienMinh">Social Network</u>
           <br />
           <br>
-          <a id="Tiktok" onClick="Tiktok()">
-            <div class="Tiktok">
+          <a style="font-size: 15px;" id="Tiktok" onClick="Tiktok()">
+            <div style="font-size: 15px;" class="Tiktok">
               <i class="bi bi-tiktok">&nbsp;</i> Tiktok
             </div>
           </a>
           
           <br />
-          <a id="Facebook" onClick="Facebook()">
-            <div class="Facebook">
+          <a style="font-size: 15px;" id="Facebook" onClick="Facebook()">
+            <div style="font-size: 15px;" class="Facebook">
               <i class="bi bi-facebook">&nbsp;</i> Facebook
             </div>
           </a>
           <br>
-          <a id="Facebook" onClick="Facebook()">
-            <div class="Facebook">
+          <a style="font-size: 15px;" id="Instagram" onClick="Instagram()">
+            <div style="font-size: 15px;" class="Instagram">
               <i class="bi bi-instagram">&nbsp;</i> Instagram
             </div>
           </a>
           <br />
-          <a id="Youtube" onClick="Youtube()">
-            <div class="Youtube">
+          <a style="font-size: 15px;" id="Youtube" onClick="Youtube()">
+            <div style="font-size: 15px;" class="Youtube">
               <i class='bi bi-youtube'>&nbsp; </i> Youtube
             </div>
           </a>
           <br>
-          <a id="Github" onClick="Github()">
-            <div class="Github">
+          <a style="font-size: 15px;" id="Github" onClick="Github()">
+            <div style="font-size: 15px;" class="Github">
               <i class="bi bi-github">&nbsp;</i> Github
             </div>
           </a>
           <br />
-          <a id="Telegram" onClick="Telegram()">
-            <div class="Telegram">
+          <a style="font-size: 15px;" id="Telegram" onClick="Telegram()">
+            <div style="font-size: 15px;" class="Telegram">
               <i class="bi bi-telegram">&nbsp;</i> Telegram
             </div>
           </a>
           <br />
-          <a id="Zalo" onClick="Zalo()">
-            <div class="Zalo">
+          <a style="font-size: 15px;" id="Zalo" onClick="Zalo()">
+            <div style="font-size: 15px;" class="Zalo">
               <i class="bi bi-chat-fill">&nbsp;</i> Zalo
             </div>
           </a>
