--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="monetag" content="4ccb4741c04ba885cf9b8e1c3d1fd59a">
   <link rel="shortcut icon" href="./img/icon.ico" type="image/x-icon">
-  <title>𝙃𝙤̂̀ 𝙃𝙪̛̃𝙪 𝘾𝙪̛𝙤̛𝙣𝙜</title>
+  <title>𝙃𝙪̛̃𝙪 𝘾𝙪̛𝙤̛𝙣𝙜🧸🥀</title>
   <link rel="stylesheet" href="./css/index.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
   <link rel="stylesheet"
@@ -39,7 +39,7 @@
         <img class="Blob" src="/./img1/avt1.jpg" width="120" height="120" alt="TienMinh">
       </p>
       <h2 class="NameFtTienMinh">
-        <div id="userName" style="font-family: 'Pattaya';font-size: 26px;"> 𝙃𝙤̂̀ 𝙃𝙪̛̃𝙪 𝘾𝙪̛𝙤̛𝙣𝙜 <img
+        <div id="userName" style="font-family: 'Pattaya';font-size: 26px;"> 𝙃𝙪̛̃𝙪 𝘾𝙪̛𝙤̛𝙣𝙜🧸🥀 <img
             src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e4/Twitter_Verified_Badge.svg/512px-Twitter_Verified_Badge.svg.png"
             width="19" height="19" alt="Tích Xanh">
         </div>
@@ -74,6 +74,7 @@
       <br />
       <ul class="icons">
         <br />
+        <img src="https://i.imgur.com/u4GGWDu.jpg" width="260" height="270">
         <div class="MangXaHoiFtTienMinh">
           <u style="font-size: 25px;" class="NameFtTienMinh">Social Network</u>
           <br />
