--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             width="19" height="19" alt="Tích Xanh">
         </div>
       </h2>
-      <h2 class="TieuSu" style="font-family: 'Quicksand';font-size: 10px;"> Hi, I'm the Final Boss <br />Some things won't last forever <br></h2>
+      <h2 class="TieuSu" style="font-family: 'Quicksand';font-size: 10px;"> Ơ kìa <br /> Chuyển Tiền Đi !!! <br></h2>
       <br />
 
       <strong style="color: rgb(255, 0, 0); font-size: 10px; font-family: 'Quicksand';"> Never die:&ensp;</strong>
