--- a/index.html
+++ b/index.html
@@ -41,7 +41,16 @@
             width="19" height="19" alt="Tích Xanh">
         </div>
       </h2>
-      <h2 class="TieuSu" style="font-family: 'Quicksand';font-size: 10px;"> Ơ kìa <br /> Chuyển Tiền Đi !!! <br></h2>
+      <footer class="Cuoi Trang">
+      <p class="TienMinhFtCopyright">
+        <span style="font-size: 10px;" class="rainbow italic";class="copyright"> Ơ Kìa <a style="text-decoration: none;" class="copyright"
+            href="https://www.facebook.com/profile.php?id=100013658626743">
+            <font class="rainbow" color="white"></font>
+          </a>
+          <br />
+          <strong> Chuyển Tiền Đi !!! </strong>
+        </span>
+      </footer>
       <br />
 
       <strong style="color: rgb(255, 0, 0); font-size: 10px; font-family: 'Quicksand';"> Never die:&ensp;</strong>
@@ -73,51 +82,6 @@
         <br />
         <img src="https://i.imgur.com/u4GGWDu.jpg" width="260" height="270">
         <div class="MangXaHoiFtTienMinh">
-          <u style="font-size: 25px;" class="NameFtTienMinh">Social Network</u>
-          <br />
-          <br>
-          <a style="font-size: 15px;" id="Tiktok" onClick="Tiktok()">
-            <div style="font-size: 15px;" class="Tiktok">
-              <i class="bi bi-tiktok">&nbsp;</i> Tiktok
-            </div>
-          </a>
-          
-          <br />
-          <a style="font-size: 15px;" id="Facebook" onClick="Facebook()">
-            <div style="font-size: 15px;" class="Facebook">
-              <i class="bi bi-facebook">&nbsp;</i> Facebook
-            </div>
-          </a>
-          <br>
-          <a style="font-size: 15px;" id="Instagram" onClick="Instagram()">
-            <div style="font-size: 15px;" class="Instagram">
-              <i class="bi bi-instagram">&nbsp;</i> Instagram
-            </div>
-          </a>
-          <br />
-          <a style="font-size: 15px;" id="Youtube" onClick="Youtube()">
-            <div style="font-size: 15px;" class="Youtube">
-              <i class='bi bi-youtube'>&nbsp; </i> Youtube
-            </div>
-          </a>
-          <br>
-          <a style="font-size: 15px;" id="Github" onClick="Github()">
-            <div style="font-size: 15px;" class="Github">
-              <i class="bi bi-github">&nbsp;</i> Github
-            </div>
-          </a>
-          <br />
-          <a style="font-size: 15px;" id="Telegram" onClick="Telegram()">
-            <div style="font-size: 15px;" class="Telegram">
-              <i class="bi bi-telegram">&nbsp;</i> Telegram
-            </div>
-          </a>
-          <br />
-          <a style="font-size: 15px;" id="Zalo" onClick="Zalo()">
-            <div style="font-size: 15px;" class="Zalo">
-              <i class="bi bi-chat-fill">&nbsp;</i> Zalo
-            </div>
-          </a>
         </div>
         <br />
         <br />
@@ -133,16 +97,7 @@
       }
     </script>
     <!--<h2 class="NameFt"TienMinh">About Me</h2>-->
-    <footer class="Cuoi Trang">
-      <p class="TienMinhFtCopyright">
-        <span style="font-size: 12px;" class="rainbow italic";class="copyright">Created By <a style="text-decoration: none;" class="copyright"
-            href="https://www.facebook.com/profile.php?id=100013658626743">
-            <font class="rainbow" color="white"> [T]ôm Cương</font>
-          </a>
-          <br />
-          <strong>All rights reserved © 2023 </strong>
-        </span>
-    </footer>
+    
   </div>
   </div>
   </div>
