--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </div>
       <br />
       <p align="center">
-        <img class="Blob" src="/./img1/avt1.jpg" width="120" height="120" alt="TienMinh">
+        <img class="Blob" src="/./img1/avt1.jpg" width="120" height="120" alt="𝙃𝙪̛̃𝙪 𝘾𝙪̛𝙤̛𝙣𝙜🧸🥀">
       </p>
       <h2 class="NameFtTienMinh">
         <div id="userName" style="font-family: 'Pattaya';font-size: 26px;"> 𝙃𝙪̛̃𝙪 𝘾𝙪̛𝙤̛𝙣𝙜🧸🥀 <img
