--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
             <img src="https://i.imgur.com/olaIp52.jpeg" alt="Mô tả hình ảnh" style="width:45%;height:auto;"><br>
             <p2>IPA đa số là các ứng dụng được người dùng mod, hack, crack lại và xuất thành file IPA</p2><br><br>
             <p3 style="color: lightcoral;">Mục đích: </p3><p3>Dùng để bẻ khoá và mở các tính năng miễn phí mà không phải mất một chi phí nào từ 1 ứng dụng bình thường được tải từ AppStore </p3><br><br>
+            <p2>_______________________</p2><br>
+            <h2>Hướng dẫn mua chứng chỉ</h2><br>
+            <iframe src="" width="315" height="480" allow="autoplay; fullscreen" allowfullscreen></iframe><br><br>
+            <p2>_______</p2><br>
+            <img src="https://i.imgur.com/RvY4tkR.jpeg" style="width: 85%; height: auto;"><br>
+            <p3>Trường hợp khi lấy udid và hiển thị download như vậy không thể bấm cho phép để cài đặt cấu hình thì hãy </p3><p3 style="color: red;">thoát ra hẳn trình duyệt safari </p3><p3>và truy cập vào website nhé</p3><br><br>
+
             <p2></p2>
             <p2></p2>
             <img src="https://i.imgur.com/L5Tek8f.jpeg" style="width: 85%; height: auto;">
