--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     	<ul class="menu" id="menu">
             <li onclick="showContent('home')">Trang chủ</li><br>
             <li onclick="showContent('unlock')">App UnlockIPA</li><br>
-            <li onclick="showContent('about')">Hướng dẫn</li><br>
+            <li onclick="showContent('about')">Hướng dẫn sử dụng</li><br>
             <li onclick="showContent('event')">Tham gia Event</li><br>
             <li onclick="showContent('contact')">Liên hệ</li><br>
         </ul>
