--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 
             <p2></p2>
             <p2></p2>
-            <img src="https://i.imgur.com/L5Tek8f.jpeg" style="width: 85%; height: auto;">
+            <img src="https://i.imgur.com/L5Tek8f.jpeg" style="width: 85%; height: auto;"><br>
+	    <div style="font-family:Arial,sans-serif;color:red;font-size:35px;text-align:center;margin-top:20%;background-color:black;animation:neon 1.5s infinite alternate;@keyframes neon{0%,100%{text-shadow:0 0 5px #fff,0 0 10px #ff0000,0 0 15px #ff0000,0 0 20px #ff0000,0 0 25px #ff0000;}50%{text-shadow:0 0 5px #fff,0 0 10px #ff4444,0 0 15px #ff4444,0 0 20px #ff4444,0 0 25px #ff4444;}}">Bấm vào menu ☰ phía trên để xem hướng dẫn</div>
 
         </div>
         <div id="about" class="content" style="display: none;">
